[gd_scene load_steps=19 format=3 uid="uid://dbd72lfv4xjdr"]

[ext_resource type="Script" uid="uid://scd325yh8swm" path="res://src/main/player/player.gd" id="1_8wxd0"]
[ext_resource type="Texture2D" uid="uid://bbnbcdni8f5kn" path="res://assets/main/player/character_purple_idle.png" id="2_gmrms"]
[ext_resource type="Texture2D" uid="uid://censlhvjmk5m1" path="res://assets/main/player/character_purple_jump.png" id="3_4yq1m"]
[ext_resource type="Texture2D" uid="uid://cjkep2j5uaws4" path="res://assets/main/player/character_purple_walk_a.png" id="3_ln3wq"]
[ext_resource type="Texture2D" uid="uid://dkaqjyv3qmy7t" path="res://assets/main/player/character_purple_walk_b.png" id="4_u203y"]
[ext_resource type="PackedScene" uid="uid://dmehh4401wsni" path="res://src/main/utils/state_machine.tscn" id="5_covkf"]
[ext_resource type="PackedScene" uid="uid://cjhud2828rp0i" path="res://src/main/utils/overlap_tracker.tscn" id="6_2jfxr"]
[ext_resource type="Script" uid="uid://51kbfnwulp1s" path="res://src/main/player/player_input_handler.gd" id="6_4yq1m"]
[ext_resource type="PackedScene" uid="uid://c8e4mcx2vb5o8" path="res://src/main/utils/state.tscn" id="6_gmrms"]
[ext_resource type="Script" uid="uid://p2r0gntr00jy" path="res://src/main/player/player_state_idle.gd" id="7_ln3wq"]
[ext_resource type="Script" uid="uid://cau2s3vakgrdp" path="res://src/main/player/player_state_walk.gd" id="8_u203y"]
[ext_resource type="Script" uid="uid://dwmqmrgupm0ue" path="res://src/main/player/player_state_fall.gd" id="11_lc7fh"]
[ext_resource type="Script" uid="uid://8n3k5hi7bdi7" path="res://src/main/player/player_state_jump.gd" id="12_s00lc"]
[ext_resource type="Script" uid="uid://dvkamnli58wm3" path="res://src/main/player/player_cursor.gd" id="14_y1tn0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_y07wm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4yq1m")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gmrms")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4yq1m")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ln3wq")
}, {
"duration": 1.0,
"texture": ExtResource("4_u203y")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jfxr"]
size = Vector2(192, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8b4f"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1tn0"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_8wxd0")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.66, 0.66)
sprite_frames = SubResource("SpriteFrames_y07wm")
animation = &"fall"
autoplay = "idle"
offset = Vector2(0, -120)

[node name="CursorTracker" parent="AnimatedSprite2D" instance=ExtResource("6_2jfxr")]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="AnimatedSprite2D/CursorTracker" index="0"]
position = Vector2(0, -92)
shape = SubResource("RectangleShape2D_2jfxr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("RectangleShape2D_h8b4f")

[node name="SteppableTracker" parent="." instance=ExtResource("6_2jfxr")]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="SteppableTracker" index="0"]
position = Vector2(0, -21)
shape = SubResource("RectangleShape2D_h8b4f")

[node name="StateMachine" parent="." instance=ExtResource("5_covkf")]
unique_name_in_owner = true

[node name="Idle" parent="StateMachine" instance=ExtResource("6_gmrms")]
script = ExtResource("7_ln3wq")

[node name="Walk" parent="StateMachine" instance=ExtResource("6_gmrms")]
script = ExtResource("8_u203y")

[node name="Fall" parent="StateMachine" instance=ExtResource("6_gmrms")]
script = ExtResource("11_lc7fh")

[node name="Jump" parent="StateMachine" instance=ExtResource("6_gmrms")]
script = ExtResource("12_s00lc")

[node name="InputHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_4yq1m")

[node name="Cursor" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 100
z_as_relative = false
script = ExtResource("14_y1tn0")
color = Color(0.78039217, 0.7137255, 1, 1)

[node name="Area2D" type="Area2D" parent="Cursor"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D"]
shape = SubResource("RectangleShape2D_y1tn0")

[connection signal="overlap_ended" from="AnimatedSprite2D/CursorTracker" to="." method="_on_cursor_tracker_overlap_ended"]
[connection signal="overlap_started" from="AnimatedSprite2D/CursorTracker" to="." method="_on_cursor_tracker_overlap_started"]
[connection signal="overlap_ended" from="SteppableTracker" to="." method="_on_steppable_tracker_overlap_ended"]
[connection signal="overlap_started" from="SteppableTracker" to="." method="_on_steppable_tracker_overlap_started"]

[editable path="AnimatedSprite2D/CursorTracker"]
[editable path="SteppableTracker"]
